# the_lottery

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  the_lottery.ipynb
public/: index.html  manifest.json
src/: App.css  App.js
